ci: Add hadolint check
Signed-off-by: Ian Lewis <ian@ianlewis.org>

--- a/aqua.yaml
+++ b/aqua.yaml
@@ -28,3 +28,4 @@ packages:
   - name: rhysd/actionlint@v1.7.7
   - name: koalaman/shellcheck@v0.10.0
   - name: jqlang/jq@jq-1.7.1
+  - name: hadolint/hadolint@v2.12.0
