--- a/.github/workflows/pre-submit.units.yml
+++ b/.github/workflows/pre-submit.units.yml
@@ -117,6 +117,15 @@ jobs:
       - name: actionlint
         run: make actionlint
 
+  hadolint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: false
+      - name: actionlint
+        run: make hadolint
+
   zizmor:
     runs-on: ubuntu-latest
     permissions:
