--- a/renovate.json5
+++ b/renovate.json5
@@ -4,13 +4,17 @@
     // Use the best-practices preset. Adds options to pin dependencies.
     // https://docs.renovatebot.com/upgrade-best-practices/#whats-in-the-configbest-practices-preset
     "config:best-practices",
+
     // Update dependencies monthly
     "schedule:monthly",
+
     // Add DCO sign-off
     ":gitSignOff",
+
     // Add Aqua present to allow updating CLI tools.
     // https://aquaproj.github.io/docs/guides/renovate/
     "github>aquaproj/aqua-renovate-config#2.7.5",
+
     // Update Dockerfile package versions.
     // https://docs.renovatebot.com/presets-customManagers/#custommanagersdockerfileversions
     "customManagers:dockerfileVersions",
@@ -30,8 +34,8 @@
   customManagers: [
     {
       customType: "regex",
-      fileMatch: ["Makefile"],
-      matchStrings: ["AQUA_VERSION \??= *(?<currentValue>\\S+)"],
+      managerFilePatterns: ["/Makefile/"],
+      matchStrings: ["AQUA_VERSION \\??= *(?<currentValue>\\S+)"],
       depNameTemplate: "aquaproj/aqua",
       datasourceTemplate: "github-releases",
     },
